--- a/frontend/src/style/screens/_shippingScreen.scss
+++ b/frontend/src/style/screens/_shippingScreen.scss
@@ -49,5 +49,9 @@
     select {
       appearance: auto;
     }
+
+    button[type="submit"] {
+      width: 100%;
+    }
   }
 }
